CLC-5091 - Reapply border radius to form fields. Fix focus/hover issue with section headers in Create Course Site tool. Adjust spacing in Project Site tool form. Set buttons to use normal font weight.

--- a/src/assets/stylesheets/_canvas_base.scss
+++ b/src/assets/stylesheets/_canvas_base.scss
@@ -31,13 +31,19 @@ $bc-base-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   form input,
   form input[type="text"],
   form input[type="number"],
-  form input[type="password"],
-  button {
+  form input[type="password"] {
     &, &:hover, &:focus {
+      border-radius: 3px;
       font-family: $bc-base-font-family;
       font-size: 14px;
       font-weight: 300;
     }
+  }
+
+  button {
+    font-family: $bc-base-font-family;
+    font-size: 14px;
+    font-weight: 400;
   }
 
   form label {
